@@ -775,6 +775,9 @@ foreach my $file (sort keys %{$info->index}) {
     if ($file =~ m,\s+\z,) {
 	tag "file-name-ends-in-whitespace", "$file";
     }
+    if ($file =~ m,/\*\z,) {
+	tag "star-file", $file;
+    }
 
     # ---------------- misplaced lintian overrides
     my $tmp = quotemeta($pkg);
