@@ -16,5 +16,6 @@ Test-For:
  package-contains-mime-cache-file
  package-contains-mimeinfo.cache-file
  package-modifies-ld.so-search-path
+ star-file
  stray-directory-in-manpage-directory
  windows-devel-file-in-package
