@@ -7,6 +7,7 @@ E: files-general: package-contains-info-dir-file usr/share/info/dir.gz
 E: files-general: package-contains-mime-cache-file usr/share/mime/types
 E: files-general: package-contains-mimeinfo.cache-file usr/share/applications/mimeinfo.cache
 E: files-general: package-modifies-ld.so-search-path etc/ld.so.conf.d/lintian-lib.conf
+E: files-general: star-file usr/share/foo/*
 E: files-general: stray-directory-in-manpage-directory usr/share/man/man1/random/
 I: files-general: duplicated-compressed-file usr/share/doc/lintian/lintian-16x16.png.gz
 I: files-general: package-contains-empty-directory usr/share/man/man1/random/
